samples/_failures_safe/1761488209_9e6429_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_648e7151.c: In function ‘main’:
./samples/SAFE/__tmp_648e7151.c:123:9: error: expected expression at end of input
  123 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_648e7151.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_648e7151.c:123:9: error: expected declaration or statement at end of input
